--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body id="hero">
     <h1 id="heading"></h1>
+    <div>
+      <button id="btn">Red</button>
+      <button id="btn2">Green</button>
+      <button id="btn3">Blue</button>
+    </div>
+    <p>Test for addaevent listiners page </p>
     
+
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
